--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,7 +5,7 @@ import Project from "../components/project.astro";
 import Layout from "../layouts/main.astro";
 ---
 
-<Layout title="My Projects">
+<Layout title="Mes projets">
   <section class="relative z-20 max-w-2xl mx-auto my-12 px-7 lg:px-0">
     <PageHeading
       title="Mes projets"
