--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -18,7 +18,7 @@ import Logo from "../components/logo.astro";
       class="inline-flex justify-center mt-4 space-x-5 sm:ml-auto sm:mt-0 sm:justify-start"
     >
       <a
-        href="https://github.com/ccbikai"
+        href="https://github.com/xeshing"
         target="_blank"
         class="text-neutral-500 dark:text-neutral-400 hover:text-neutral-900 dark:hover:text-white"
       >
