--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/main.astro";
 <Layout title="Parcours professionnel et alternance">
   <section class="relative z-20 max-w-2xl mx-auto my-12 px-7 lg:px-0">
     <PageHeading
-      title="À propos de moi"
+      title="Parcours professionnel et alternance"
       description="En parallèle de mes études, je suis alternant au sein du service de lutte contre la cybercriminalité (SLCC) du groupe La Poste."
     />
     <PageHeading
