projects en projets

--- a/src/components/home/projets.astro
+++ b/src/components/home/projets.astro
@@ -31,6 +31,6 @@ import Project from "../project.astro";
   </div>
 
   <div class="flex items-center justify-center w-full py-5">
-    <Button text="Voir tous mes projets" link="/projects" />
+    <Button text="Voir tous mes projets" link="/projets" />
   </div>
 </section>
