ajout veille tech

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -12,6 +12,9 @@ import Layout from "../layouts/main.astro";
       description="Vous trouverez ici tous mes projets (Développement, Cybersécurité, autres...)"
     />
 
+    <Separator text="Veille technologique" />
+
+
     <div
       class="z-50 grid items-stretch w-full grid-cols-1 my-8 gap-7 sm:gap-5 sm:grid-cols-2"
     >
