project.astro : modif veille technologique

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -33,8 +33,7 @@ import Separator from "../components/home/separator.astro";
     <Separator text="Veille technologique" />
     <PageHeading
       title="Veille technologique"
-      description="Vous trouverez ici les diverses ressources que j'utilise afin de me tenir informé des dernières tendances et nouveautés dans le domaine de la technologie."
-      />
+      description="Je me tiens régulièrement informé sur les dernières actualités liées à la cybersécurité et aux tests d'intrusion."/>
       <Button text="r/pentesting" link="https://www.reddit.com/r/Pentesting/" />
       <Button text="r/netsec" link="https://www.reddit.com/r/netsec/" />
       <Button text="r/cybersecurity" link="https://www.reddit.com/r/cybersecurity/" />
